# BugFinder

api/: Cargo.toml  docker-compose.yml  seagull.toml
api/migrations/: V1__create_users_table.sql  V1__initial.sql  V2__create_projects_table.sql  V3__create_issues_table.sql
api/src/: database.rs  main.rs
api/src/graphql/: schema.rs  types.rs
